force-app/main/default/objects/RFP_Answer_Version__c/RFP_Answer_Version__c.object-meta.xml
<CustomObject>
    <label>RFP Answer Version</label>
    <nameField>
        <displayFormat>V-{0000}</displayFormat>
        <label>Answer Version</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RFP Answer Versions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>