force-app/main/default/objects/RFP_Answer_Version__c/fields/Answer__c.field-meta.xml
<CustomField>
    <fullName>Answer__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Answer</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>