force-app/main/default/objects/RFP_Answer_Version__c/fields/Is_Latest__c.field-meta.xml
<CustomField>
    <fullName>Is_Latest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsLatest</label>
    <type>Checkbox</type>
</CustomField>