force-app/main/default/objects/RFP_Answer_Version__c/fields/RFP_Question__c.field-meta.xml
<CustomField>
    <fullName>RFP_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RFP Question and Answer</label>
    <referenceTo>RFP_Question_And_Answer__c</referenceTo>
    <relationshipLabel>RFP Answer Versions</relationshipLabel>
    <relationshipName>RFP_Answers</relationshipName>
    <type>Lookup</type>
</CustomField>