force-app/main/default/objects/RFP_Answer_Version__c/fields/Submitted_Owner__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SubmittedBy</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Answer_Version</relationshipName>
    <type>Lookup</type>
</CustomField>